--- a/frame-server/app/requirements.txt
+++ b/frame-server/app/requirements.txt
@@ -4,7 +4,10 @@ numpy==2.0.2
 pillow==11.0.0
 pillow_heif==0.21.0
 PyYAML==6.0.2
-rawpy==0.23.2
 watchdog==6.0.0
-DateTime==5.5
-ntplib
+icalendar==5.0.11
+arrow
+tzlocal
+recurring_ical_events
+matplotlib
+rawpy==0.23.2
